# ecdsa-manager

./: .gitignore  Cargo.toml  README.md  build.rs  config.yml
src/: common.rs  lib.rs  run.rs  server.rs  status.rs  utils.rs
src/proto/: ecdsa_agent_grpc.proto  ecdsa_manager_grpc.proto
