[package]
name = "ecdsa-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ecdsa-manager"
path = "src/bin/main.rs"

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
clap = "2.33.4"
fil_logger = "0.1.7"
log = "0.4.20"
prost = "0.12.3"
strum = "0.25.0"
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
anyhow = "1.0.75"
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
signal-hook = "0.3.17"
dirs = "5.0.1"
serde_yaml = "0.9.27"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[build-dependencies]
tonic-build = "0.10.2"
